# lintr-website

./: .gitignore  Makefile  README.md  eslint.config.mjs  hugo.yaml.in  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  pyproject.toml  rollup.config.js  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: deploy-preview.yml  deploy-production.yml
docs/: typescript-migration-guide.md
layouts/: 404.html  home.html
layouts/_default/: baseof.html  redirect.html
layouts/docs/: baseof.html  single.html
layouts/json/: search_index.json
layouts/partials/: blog_meta.html  dark_mode_switcher.html  documentation_flyover.html  footer.html  head.html  header.html  header_docs.html  search_form.html  stylesheets.html  version_selector.html
layouts/shortcodes/: autocolumns.html  note.html  option.html  tabs.html  warning.html
src/: app.js  app.ts
src/css/: _base.css  _clipboard.css  _collapse.css  _components.css  _content.css  _docs.css  _fonts.css  _highlight.css  _search.css  _windows.css  app.css
src/js/controllers/: autocolumns_controller.js  clipboard_controller.js  collapsible_controller.js  search_controller.js
src/ts/controllers/: hello_controller.ts
src/types/: stimulus.d.ts
